[package]
name = "cymochawesome-to-idb3pl"
version = "0.1.2"
edition = "2024"
authors = ["Levi Indrajaya Sutantio <alevindrajaya@gmail.com>"]
description = "Convert JSON Generated Cypress Mocha Test report to InfluxDB3 Protocol Lines"
license = "MIT"
repository = "https://github.com/leviis10/cymochawesome-to-idb3pl"
keywords = ["cypress", "influxdb", "parser"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
reqwest = "0.12.20"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
